Change updateOne endpoint to eliminate id http param i.e. use only the id in POST body
