# swagger.yml
@@ -56,13 +56,6 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
-  /todo/{id}:
-    parameters:
-      - name: id
-        in: path
-        type: integer
-        format: int64
-        required: true
     put:
       tags:
         - todos
@@ -81,6 +74,13 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
+  /todo/{id}:
+    parameters:
+      - name: id
+        in: path
+        type: integer
+        format: int64
+        required: true
     delete:
       tags:
         - todos
